--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /samples_with_both_features_and_binaries/samples_with_both_features_and_binaries.json
 /samples_with_both_features_and_binaries/family_sample_threshold.json
 /samples_with_features/
+/dataset_images/
+/dataset_status/
+/samples_with_both_features_and_binaries/selected - 100.json
+/download/report/
